--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -13,7 +14,13 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "@types/node": "^16.4.10",
+    "@types/react": "^17.0.15",
+    "@types/styled-components": "^5.1.11",
+    "babel-plugin-styled-components": "^1.12.0",
+    "commitizen": "^4.2.4",
+    "husky": "^7.0.1",
+    "typescript": "^4.3.5"
   },
   "license": "MIT"
 }
