--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "commit": "git cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -19,6 +25,7 @@
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.12.0",
     "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.1",
     "typescript": "^4.3.5"
   },
