--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-plugin-styled-components": "^1.12.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
     "husky": "^7.0.1",
     "typescript": "^4.3.5"
   },
