--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.4.4",
     "axios": "^0.21.1",
+    "graphql": "^15.5.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3"
   },
