--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
+    "react-markdown": "^7.0.1",
+    "react-syntax-highlighter": "^15.4.4",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.12.0",
     "commitizen": "^4.2.4",
